--- a/ARkit-HitGame/Base.lproj/Main.storyboard
+++ b/ARkit-HitGame/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,85 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ARkit_HitGame" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AVL-Ud-FeA">
+                                <rect key="frame" x="0.0" y="60" width="375" height="607"/>
+                            </arscnView>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="50K-w9-KYX">
+                                <rect key="frame" x="20" y="547" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="56i-tc-C2L"/>
+                                    <constraint firstAttribute="width" constant="100" id="gxm-sm-thb"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="Play"/>
+                                <connections>
+                                    <action selector="playBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wod-RP-W5I"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R4M-MA-8pT">
+                                <rect key="frame" x="255" y="547" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="Ljp-Tq-56e"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="100" id="TiJ-D0-slN"/>
+                                    <constraint firstAttribute="height" constant="100" id="qaC-JR-S3I"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="vvL-t5-h3v"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="Reset"/>
+                                <connections>
+                                    <action selector="resetBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Dvv-aK-uMm"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yMv-73-38S">
+                                <rect key="frame" x="0.0" y="10" width="375" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Let's Play" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oKt-IK-Ueg">
+                                        <rect key="frame" x="142" y="11.5" width="90.5" height="27.5"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-BoldItalic" family="Avenir Next" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="4VA-tB-xJN"/>
+                                    <constraint firstItem="oKt-IK-Ueg" firstAttribute="centerY" secondItem="yMv-73-38S" secondAttribute="centerY" id="DZF-nZ-m9q"/>
+                                    <constraint firstItem="oKt-IK-Ueg" firstAttribute="centerX" secondItem="yMv-73-38S" secondAttribute="centerX" id="pQX-0h-8xy"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="50K-w9-KYX" secondAttribute="bottom" constant="20" id="0XC-fR-MzT"/>
+                            <constraint firstItem="yMv-73-38S" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="2Cr-8m-dXy"/>
+                            <constraint firstItem="yMv-73-38S" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Tu1-el-R5w"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="R4M-MA-8pT" secondAttribute="trailing" constant="20" id="Uza-db-FOD"/>
+                            <constraint firstItem="AVL-Ud-FeA" firstAttribute="top" secondItem="yMv-73-38S" secondAttribute="bottom" id="avh-He-PJl"/>
+                            <constraint firstItem="AVL-Ud-FeA" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="eD8-zU-0Eq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="R4M-MA-8pT" secondAttribute="bottom" constant="20" id="osv-OP-bbM"/>
+                            <constraint firstItem="yMv-73-38S" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="10" id="s1X-Sr-s8h"/>
+                            <constraint firstItem="AVL-Ud-FeA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="smz-74-5pc"/>
+                            <constraint firstItem="50K-w9-KYX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="uhp-Xc-xrx"/>
+                            <constraint firstItem="AVL-Ud-FeA" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="vcY-Vd-E4D"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="SceneView" destination="AVL-Ud-FeA" id="UXM-Yd-OAY"/>
+                        <outlet property="play" destination="50K-w9-KYX" id="ilD-Lh-zD1"/>
+                        <outlet property="timerLbl" destination="oKt-IK-Ueg" id="c06-5g-iwg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="88.799999999999997" y="118.29085457271366"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Play" width="102" height="102"/>
+        <image name="Reset" width="102" height="102"/>
+    </resources>
 </document>
